// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    .placeholderColor255::-webkit-input-placeholder { color: rgba(0, 0, 255, 0.5) };
    .placeholderColor255::-moz-placeholder { color: rgba(0, 0, 255, 0.5) };
    .placeholderColor255:-ms-input-placeholder { color: rgba(0, 0, 255, 0.5) };
    .placeholderColor255:-moz-placeholder { color: rgba(0, 0, 255, 0.5) };
    .placeholderColor255::placeholder { color: rgba(0, 0, 255, 0.5) };
  ",
        }
      }
    />
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": 0,
          "position": "relative",
        }
      }
    />
    <input
      className="placeholderColor255"
      maxLength={1}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "gray",
          "borderBottomWidth": 1,
          "borderLeftColor": "gray",
          "borderRightColor": "gray",
          "borderStyle": "solid",
          "borderTopColor": "gray",
          "color": "blue",
          "display": "inline",
          "flexDirection": "column",
          "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
          "fontSize": 18,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "24px",
          "msHyphens": "auto",
          "outline": "none",
          "overflowWrap": "break-word",
          "paddingBottom": 11,
          "paddingTop": 12,
          "position": "relative",
          "textAlign": "left",
          "textDecoration": "none",
          "whiteSpace": "pre-wrap",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "minHeight": 24,
        "position": "relative",
      }
    }
  />
</div>
`;

exports[`disabled 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    .placeholderColor0::-webkit-input-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0::-moz-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0:-ms-input-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0:-moz-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0::placeholder { color: rgba(0, 0, 0, 0.5) };
  ",
        }
      }
    />
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": 0,
          "position": "relative",
        }
      }
    />
    <input
      className="placeholderColor0"
      disabled={true}
      maxLength={1}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "gray",
          "borderBottomWidth": 1,
          "borderLeftColor": "gray",
          "borderRightColor": "gray",
          "borderStyle": "solid",
          "borderTopColor": "gray",
          "color": "black",
          "display": "inline",
          "flexDirection": "column",
          "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
          "fontSize": 18,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "24px",
          "msHyphens": "auto",
          "opacity": 0.5,
          "outline": "none",
          "overflowWrap": "break-word",
          "paddingBottom": 11,
          "paddingTop": 12,
          "position": "relative",
          "textAlign": "left",
          "textDecoration": "none",
          "whiteSpace": "pre-wrap",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "minHeight": 24,
        "position": "relative",
      }
    }
  />
</div>
`;

exports[`error 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    .placeholderColor0::-webkit-input-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0::-moz-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0:-ms-input-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0:-moz-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0::placeholder { color: rgba(0, 0, 0, 0.5) };
  ",
        }
      }
    />
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": 0,
          "position": "relative",
        }
      }
    />
    <input
      className="placeholderColor0"
      maxLength={1}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "gray",
          "borderBottomWidth": 1,
          "borderLeftColor": "gray",
          "borderRightColor": "gray",
          "borderStyle": "solid",
          "borderTopColor": "gray",
          "color": "black",
          "display": "inline",
          "flexDirection": "column",
          "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
          "fontSize": 18,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "24px",
          "msHyphens": "auto",
          "outline": "none",
          "overflowWrap": "break-word",
          "paddingBottom": 11,
          "paddingTop": 12,
          "position": "relative",
          "textAlign": "left",
          "textDecoration": "none",
          "whiteSpace": "pre-wrap",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "minHeight": 24,
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "color": "red",
          "display": "inline",
          "flexDirection": "column",
          "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "24px",
          "msHyphens": "auto",
          "overflowWrap": "break-word",
          "position": "relative",
          "textAlign": "left",
          "textDecoration": "none",
          "whiteSpace": "pre-wrap",
        }
      }
    >
      error
    </div>
  </div>
</div>
`;

exports[`label 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    .placeholderColor0::-webkit-input-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0::-moz-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0:-ms-input-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0:-moz-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0::placeholder { color: rgba(0, 0, 0, 0.5) };
  ",
        }
      }
    />
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": 0,
          "position": "relative",
        }
      }
    >
      <div
        style={
          Object {
            "color": "black",
            "display": "inline",
            "flexDirection": "column",
            "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
            "fontSize": 18,
            "fontStyle": "normal",
            "fontWeight": 600,
            "lineHeight": "24px",
            "msHyphens": "auto",
            "overflowWrap": "break-word",
            "position": "relative",
            "textAlign": "left",
            "textDecoration": "none",
            "whiteSpace": "pre-wrap",
          }
        }
      >
        label
      </div>
    </div>
    <input
      className="placeholderColor0"
      maxLength={1}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "gray",
          "borderBottomWidth": 1,
          "borderLeftColor": "gray",
          "borderRightColor": "gray",
          "borderStyle": "solid",
          "borderTopColor": "gray",
          "color": "black",
          "display": "inline",
          "flexDirection": "column",
          "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
          "fontSize": 18,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "24px",
          "msHyphens": "auto",
          "outline": "none",
          "overflowWrap": "break-word",
          "paddingBottom": 11,
          "paddingTop": 12,
          "position": "relative",
          "textAlign": "left",
          "textDecoration": "none",
          "whiteSpace": "pre-wrap",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "minHeight": 24,
        "position": "relative",
      }
    }
  />
</div>
`;

exports[`render 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "position": "relative",
      }
    }
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    .placeholderColor0::-webkit-input-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0::-moz-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0:-ms-input-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0:-moz-placeholder { color: rgba(0, 0, 0, 0.5) };
    .placeholderColor0::placeholder { color: rgba(0, 0, 0, 0.5) };
  ",
        }
      }
    />
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "marginBottom": 0,
          "position": "relative",
        }
      }
    />
    <input
      className="placeholderColor0"
      maxLength={1}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "gray",
          "borderBottomWidth": 1,
          "borderLeftColor": "gray",
          "borderRightColor": "gray",
          "borderStyle": "solid",
          "borderTopColor": "gray",
          "color": "black",
          "display": "inline",
          "flexDirection": "column",
          "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif",
          "fontSize": 18,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": "24px",
          "msHyphens": "auto",
          "outline": "none",
          "overflowWrap": "break-word",
          "paddingBottom": 11,
          "paddingTop": 12,
          "position": "relative",
          "textAlign": "left",
          "textDecoration": "none",
          "whiteSpace": "pre-wrap",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "minHeight": 24,
        "position": "relative",
      }
    }
  />
</div>
`;
